--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/api/(.*)", "destination": "https://unusual-rhetta-massine-448559e9.koyeb.app/api/$1" },
     {
       "source": "/(.*)",
       "destination": "/index.html"
